--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logoApp_PA.png
+    - assets/nutricionista.png
+    - assets/aedesAegypti.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -89,11 +91,28 @@ flutter:
     - family: Futura
       fonts:
         - asset: fonts/Futura.ttc
+       # - asset: fonts/Futura/Futura-Bold.ttf
 
     - family: Montserrat
       fonts:
         - asset: fonts/Montserrat/static/Montserrat-Bold.ttf
         - asset: fonts/Montserrat/static/Montserrat-Black.ttf
         - asset: fonts/Montserrat/static/Montserrat-Regular.ttf
+        - asset: fonts/Montserrat/Montserrat-VariableFont_wght.ttf
+        - asset: fonts/Montserrat/static/Montserrat-ExtraBold.ttf
+        - asset: fonts/Montserrat/static/Montserrat-ExtraLight.ttf
+        - asset: fonts/Montserrat/static/Montserrat-Light.ttf
+
+    - family: Helvetica
+      fonts:
+        - asset: fonts/Helvetica.ttc
+        #- asset: fonts/Helvetica-Bold.ttc
+
+    - family: HelveticaNeue
+      fonts:
+        - asset: fonts/HelveticaNeue.ttc
+       # - asset: fonts/HelveticaNeue/HelveticaNeue-Bold.ttf
+        #- asset: fonts/HelveticaNeue/HelveticaNeue-CondensedBlack.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
